collection title truncation in navigation (testing fix)

--- a/style.less
+++ b/style.less
@@ -74,8 +74,23 @@ body {
 	margin: 0;
 	z-index: 999; // Important for placing the menu container OVER the background image
 	transition: 0.2s ease-in;
+	
+	.navbar-header {
+		// display: inline-block;
+		// width: 100%;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		white-space: nowrap;
+	}
+	
 	.navbar-brand {
 		padding: 0;
+		
+		width: 100%;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		white-space: nowrap;
+		
 		> h3 {
 			vertical-align: middle;
 			position: relative;
@@ -95,6 +110,10 @@ body {
 				padding-bottom: 17px;
 				position: relative;
 				display: block;
+				
+				overflow: hidden;
+				text-overflow: ellipsis;
+				white-space: nowrap;
 			}
 		}
 	}
@@ -163,24 +182,24 @@ body.loggedin .navbar.main-header-navigation.affix { top: 27px }
 	}
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 767px) {
 	.navbar.main-header-navigation .navbar-brand {
 		width: ~"calc(100% - 60px)";
 		> h3 a {
 			display: inline-block;
 			font-size: 15px;
 			width: 100%;
-			overflow: hidden;
-			text-overflow: ellipsis;
-			white-space: nowrap;
 		}
 	}
 }
-@media only screen and (max-width: 414px) {
-	.navbar.main-header-navigation .navbar-brand > h3 a {
-		max-width: 220px;
-	}
+@media (max-width: 767px) {
+	
 }
+// @media only screen and (max-width: 414px) {
+	// .navbar.main-header-navigation .navbar-brand > h3 a {
+		// max-width: 220px;
+	// }
+// }
 
 // SPECIAL FRONT PAGE:
 div.front_main_area {
